src/test/resources/stakeholders/invalid/owners/src/main/stakeholders/First.owner
package owners

owner First {
    display = "First"
}
